<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World Wonders</string>
    <string name="mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="join">Entrar</string>
    <string name="name">Nome</string>
    <string name="confirm">Confirmação</string>
    <string name="country">Pais</string>
    <string name="language">Idioma</string>
    <string name="sex">Sexo</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="notification">Notificações</string>
    <string name="send">Enviar</string>
    <string name="register">Registrar</string>
    <string name="passwordDifferentConfirm">A senha é diferente da confirmação</string>
    <string name="userOrPassword">Usuário ou senha</string>
    <string name="invalid">Inválido</string>
    <string name="required">Requerido</string>
    <string name="logout">Sair</string>
    <string name="rate">Avaliar</string>
    <string name="about">Sobre</string>
    <string name="settings">Configuração</string>
    <string name="worldWondersMachuPicchu">Machu Picchu</string>
    <string name="lorenIpsum">Machu Picchu (em quíchua Machu Pikchu, "velha montanha"),1 também chamada "cidade perdida dos Incas",2 é uma cidade pré-colombiana bem conservada, localizada no topo de uma montanha, a 2400 metros de altitude, no vale do rio Urubamba, atual Peru.</string>
    <string name="peru">Peru</string>
    <string name="cancel">Cancelado</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="withoutconnection">Sem conexão com a internet</string>
    <string name="confirmation_message">Gostaria de sincronizar as maravilhas do mundo?</string>
    <string name="about_message">CI&amp;T - Course Android</string>
    <string name="confirmation_button">Sim</string>
    <string name="cancel_button">Não</string>
</resources>
