<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageLogo"
        android:src="@drawable/world_wonders" />

    <TextView
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:id="@+id/textMail"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editMail"
        android:hint="@string/mail" />

    <TextView
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textPassword"
        android:text="@string/password"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editPassword"
        android:hint="@string/password"
        android:password="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/buttonSend"
        android:layout_marginTop="20dp"
        android:onClick="buttonSend" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/buttonRegister"
        android:layout_marginTop="20dp"
        android:onClick="buttonRegister" />
</LinearLayout>